# no-bg

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  app.py  pyproject.toml  requirements.txt
static/: script.js  styles.css
templates/: index.html
tests/: test_app.py
