[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "no-bg"
version = "0.1.0"
description = "Background removal web app using rembg"
requires-python = ">=3.8"
dependencies = [
    "flask==2.3.3",
    "Pillow==10.1.0",
    "pytest==7.4.3",
    "rembg>=2.0.55",
    "llvmlite>=0.41.0",
    "numba>=0.58.0",
    "onnxruntime>=1.16.0,<1.20.0",
]

[tool.setuptools]
py-modules = ["app"]

[tool.setuptools.exclude-package-data]
"*" = ["static/*", "templates/*"]

[tool.ruff]
line-length = 88
target-version = "py312"
fix = true

# Exclude a variety of commonly ignored directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
# Enable Pyflakes, pycodestyle, isort, and more
select = ["E", "F", "I", "W", "B", "C4", "UP"]

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
# Flag high complexity functions for scrutiny
max-complexity = 15

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
